fastapi-demo-deployment/prd/fastapi-demo-prd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: fastapi-demo2-deployment
  namespace: fastapi-demo2
  labels:
    application: fastapi-demo2
    stage: stg
spec: 
  replicas: 2
  selector:
    matchLabels:
      csti.kubernetes.application: fastapi-demo2
  template:
    metadata:
      labels:
        csti.kubernetes.application: fastapi-demo2
    spec: 
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers: 
        - name: fastapi-demo2
          image: foxhound7812/fastapi_pq_backend_demo
          ports: 
          - containerPort: 5000
          resources:
            limits:
              cpu: 250m
              memory: 250Mi
            requests:
              cpu: 250m
              memory: 250Mi
      restartPolicy: Always
